# rag-project-gasparova

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml
00_planning/: step_01_project_idea.md
app/: chunker.py  config.py  generator.py  main.py  prompts.py  retriever.py
data/raw/: datasets.json
doc/: conventions.md  tasklist.md  vision.md  workflow.md
doc/screenshots/: image1  image2  image3  image4
homework/: submission.md
scripts/: build_index.py  check_generator.py  check_retrieval.py  fetch_data.py  ingest.py
tests/: test_chunking.py  test_retrieval.py
