[project]
name = "rag-project-gasparova"
version = "0.1.0"
description = "Учебный RAG: подбор витаминных шотов по запросу (DSLD, TF-IDF)"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "numpy>=1.24",
    "streamlit>=1.30",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
